--- a/src/EnqueueIt.Dashboard/Views/EnqueueIt/Job.cshtml
+++ b/src/EnqueueIt.Dashboard/Views/EnqueueIt/Job.cshtml
@@ -78,7 +78,7 @@ else
             <script>
                 document.write(`<span class="dateTime" data-toggle="tooltip" data-placement="top"
                     data-time='@Model.CreatedAt.ToString("yyyy-MM-dd HH:mm:ss")'
-                    title="${moment.utc('@Model.CreatedAt').format('ddd DD-MMM-YYYY, HH:mm:ss')}">
+                    title="${moment.utc('@Model.CreatedAt.ToString("yyyy-MM-dd HH:mm:ss")').format('ddd DD-MMM-YYYY, HH:mm:ss')}">
                     ${moment.utc('@Model.CreatedAt.ToString("yyyy-MM-dd HH:mm:ss")').fromNow()}
                 </span>`);
             </script>
@@ -97,7 +97,7 @@ else
                         <script>
                             document.write(`<span class="dateTime" data-toggle="tooltip" data-placement="top"
                                 data-time='@Model.BackgroundJobs[0].CreatedAt.ToString("yyyy-MM-dd HH:mm:ss")'
-                                title="${moment.utc('@Model.BackgroundJobs[0].CreatedAt').format('ddd DD-MMM-YYYY, HH:mm:ss')}">
+                                title="${moment.utc('@Model.BackgroundJobs[0].CreatedAt.ToString("yyyy-MM-dd HH:mm:ss")').format('ddd DD-MMM-YYYY, HH:mm:ss')}">
                                 ${moment.utc('@Model.BackgroundJobs[0].CreatedAt.ToString("yyyy-MM-dd HH:mm:ss")').fromNow()}
                             </span>`);
                         </script>
@@ -107,7 +107,7 @@ else
                         <script>
                             document.write(`<span class="dateTime" data-toggle="tooltip" data-placement="top"
                                 data-time='@Model.BackgroundJobs[0].StartedAt.Value.ToString("yyyy-MM-dd HH:mm:ss")'
-                                title="${moment.utc('@Model.BackgroundJobs[0].StartedAt').format('ddd DD-MMM-YYYY, HH:mm:ss')}">
+                                title="${moment.utc('@Model.BackgroundJobs[0].StartedAt.Value.ToString("yyyy-MM-dd HH:mm:ss")').format('ddd DD-MMM-YYYY, HH:mm:ss')}">
                                 ${moment.utc('@Model.BackgroundJobs[0].StartedAt.Value.ToString("yyyy-MM-dd HH:mm:ss")').fromNow()}
                             </span>`);
                         </script>
@@ -135,7 +135,7 @@ else
                 <script>
                     document.write(`<span class="dateTime" data-toggle="tooltip" data-placement="top"
                         data-time='@Model.StartAt.Value.ToString("yyyy-MM-dd HH:mm:ss")'
-                        title="${moment.utc('@Model.StartAt').format('ddd DD-MMM-YYYY, HH:mm:ss')}">
+                        title="${moment.utc('@Model.StartAt.Value.ToString("yyyy-MM-dd HH:mm:ss")').format('ddd DD-MMM-YYYY, HH:mm:ss')}">
                         ${moment.utc('@Model.StartAt.Value.ToString("yyyy-MM-dd HH:mm:ss")').fromNow()}
                     </span>`);
                 </script>
