--- a/src/EnqueueIt.Dashboard/Views/EnqueueIt/Queues.cshtml
+++ b/src/EnqueueIt.Dashboard/Views/EnqueueIt/Queues.cshtml
@@ -60,7 +60,7 @@
                             <script>
                                 document.write(`<span class="dateTime" data-toggle="tooltip" data-placement="top"
                                     data-time='@job.CreatedAt.ToString("yyyy-MM-dd HH:mm:ss")'
-                                    title="${moment.utc('@job.CreatedAt').format('ddd DD-MMM-YYYY, HH:mm:ss')}">
+                                    title="${moment.utc('@job.CreatedAt.ToString("yyyy-MM-dd HH:mm:ss")').format('ddd DD-MMM-YYYY, HH:mm:ss')}">
                                     ${moment.utc('@job.CreatedAt.ToString("yyyy-MM-dd HH:mm:ss")').fromNow()}
                                 </span>`);
                             </script>
