--- a/src/EnqueueIt.Dashboard/Views/EnqueueIt/BgJobs.cshtml
+++ b/src/EnqueueIt.Dashboard/Views/EnqueueIt/BgJobs.cshtml
@@ -113,7 +113,7 @@
                                 <script>
                                     document.write(`<span class="dateTime" data-toggle="tooltip" data-placement="top"
                                         data-time='@job.StartedAt.Value.ToString("yyyy-MM-dd HH:mm:ss")'
-                                        title="${moment.utc('@job.StartedAt').format('ddd DD-MMM-YYYY, HH:mm:ss')}">
+                                        title="${moment.utc('@job.StartedAt.Value.ToString("yyyy-MM-dd HH:mm:ss")').format('ddd DD-MMM-YYYY, HH:mm:ss')}">
                                         ${moment.utc('@job.StartedAt.Value.ToString("yyyy-MM-dd HH:mm:ss")').fromNow()}
                                     </span>`);
                                 </script>
@@ -128,7 +128,7 @@
                                 <script>
                                     document.write(`<span class="dateTime" data-toggle="tooltip" data-placement="top"
                                         data-time='@job.CompletedAt.Value.ToString("yyyy-MM-dd HH:mm:ss")'
-                                        title="${moment.utc('@job.CompletedAt').format('ddd DD-MMM-YYYY, HH:mm:ss')}">
+                                        title="${moment.utc('@job.CompletedAt.Value.ToString("yyyy-MM-dd HH:mm:ss")').format('ddd DD-MMM-YYYY, HH:mm:ss')}">
                                         ${moment.utc('@job.CompletedAt.Value.ToString("yyyy-MM-dd HH:mm:ss")').fromNow()}
                                     </span>`);
                                 </script>
